finish intro and welcome sections

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container ">
             <div class="header__inner ">
                 <nav class="nav header__nav">
                     <ul class="nav__list">
@@ -43,8 +43,42 @@
                 <p class="intro__subtext">Lets Discover The World Together</p>
                 <button class="btn">Plan Your Trip</button>
             </div>
-            <div class="intro__footer">
+            <button type="button" class="intro__footer">
                 Watch <b>Intro Video</b>
+            </button>
+        </section>
+        <!-- END intro -->
+        <section class="welcome">
+            <div class="container container--paddings">
+                <header class="container__header">
+                    <h2 class="container__title">Welcome to Fusion</h2>
+                    <p class="container__small-subtext">Nam consectetur elementum neque vitae condimentum. Aenean dignissim, turpis et tincidunt finibus, massa purus malesuada metus, a commodo velit magna nec nibh. Donec dictum fringilla tempus. Nunc rhoncus sapien lectus, non fermentum
+                        neque euismod quis. Phasellus sagittis tortor in accumsan</p>
+                </header>
+                <div class="welcome__inner">
+                    <ul class="welcome__list features">
+                        <li class="welcome__item">
+                            <img src="/img/welcome/1.png" alt="" class="welcome__img">
+                            <h3 class="welcome__title">Best Price Guarantee</h3>
+                            <p class="welcome__text">SpaceTeam bootstrapping user centered design sticky note convergence fund</p>
+                        </li>
+                        <li class="welcome__item">
+                            <img src="/img/welcome/2.png" alt="" class="welcome__img">
+                            <h3 class="welcome__title">Best Price Guarantee</h3>
+                            <p class="welcome__text">User story Steve Jobs Stev Jobs iterate human-centered design iterate pair progra ming 360 campaign.</p>
+                        </li>
+                        <li class="welcome__item">
+                            <img src="/img/welcome/3.png" alt="" class="welcome__img">
+                            <h3 class="welcome__title">Best Price Guarantee</h3>
+                            <p class="welcome__text">Thought leader cortado viral viral earned media long shadow actionable</p>
+                        </li>
+                    </ul>
+                    <ul class="welcome__controls">
+                        <li class="welcome__circle"><button type="button" class="welcome__btn"></button></li>
+                        <li class="welcome__circle"><button type="button" class="welcome__btn welcome__btn--active"></button></li>
+                        <li class="welcome__circle"><button type="button" class="welcome__btn"></button></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
