remove unused classes

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     <p class="container__small-subtext">Nam consectetur elementum neque vitae condimentum. Aenean dignissim, turpis et tincidunt finibus, massa purus malesuada metus, a commodo velit magna nec nibh. Donec dictum fringilla tempus. Nunc rhoncus sapien lectus, non fermentum
                         neque euismod quis. Phasellus sagittis tortor in accumsan</p>
                 </header>
-                <div class="welcome__inner">
-                    <ul class="welcome__list features">
+                <div>
+                    <ul class="welcome__list">
                         <li class="welcome__item">
                             <img src="/img/welcome/1.png" alt="" class="welcome__img">
                             <h3 class="welcome__title">Best Price Guarantee</h3>
@@ -129,8 +129,8 @@
                     <h2 class="container__title">Find Your Destination</h2>
                     <p class="container__subtext">Most Popular Places Are Waiting For You</p>
                 </header>
-                <div class="find__body">
-                    <p class="find__search">
+                <div>
+                    <p>
                         <form action="" class="find__form">
                             <input class="find__image-search" type="image" name="find__search" src="/img/find/image-search.png" alt="">
                             <input class="find__input-text" type="text" placeholder="Search...">
