add PSD template

--- a/index.html
+++ b/index.html
@@ -149,37 +149,37 @@
                         </button>
                         <ul class="find__slider">
                             <li class="find__item ">
-                                <a href=" " class="find__link ">
+                                <a href=" ">
                                     <img src="/img/find/img.jpg " alt=" " class="find__img " width="396 " height="400 ">
                                     <h3 class="find__title ">Thailand</h3>
                                 </a>
                             </li>
                             <li class="find__item ">
-                                <a href=" " class="find__link ">
+                                <a href=" ">
                                     <img src="/img/find/img.jpg " alt=" " class="find__img " width="396 " height="400 ">
                                     <h3 class="find__title ">Australia</h3>
                                 </a>
                             </li>
                             <li class="find__item ">
-                                <a href=" " class="find__link ">
+                                <a href=" ">
                                     <img src="/img/find/img.jpg " alt=" " class="find__img " width="396 " height="400 ">
                                     <h3 class="find__title ">Indonesia</h3>
                                 </a>
                             </li>
                             <li class="find__item ">
-                                <a href=" " class="find__link ">
+                                <a href=" ">
                                     <img src="/img/find/img.jpg " alt=" " class="find__img " width="396 " height="400 ">
                                     <h3 class="find__title ">France</h3>
                                 </a>
                             </li>
                             <li class="find__item ">
-                                <a href=" " class="find__link ">
+                                <a href=" ">
                                     <img src="/img/find/img.jpg " alt=" " class="find__img " width="396 " height="400 ">
                                     <h3 class="find__title ">Malaysia</h3>
                                 </a>
                             </li>
                             <li class="find__item ">
-                                <a href=" " class="find__link ">
+                                <a href=" ">
                                     <img src="/img/find/img.jpg " alt=" " class="find__img " width="396 " height="400 ">
                                     <h3 class="find__title ">UAE</h3>
                                 </a>
@@ -245,14 +245,14 @@
                     <h2 class="container__title">What Our Client Says</h2>
                     <p class="container__subtext">People’s sharing their thought about our works</p>
                 </header>
-                <div class="testimonials__slider">
+                <div>
                     <div class="testimonials__slider--container">
                         <img class="testimonials__quote testimonials__quote--left" alt="" src="/img/testimonials__quote.png" width="75" height="67">
                         <firgure class="testimonials__figure">
                             <img src="/img/testimonials.jpg" alt="" class="testimonials__img">
                             <div class="testimonials__quote-wrapper">
                                 <blockquote class="testimonials__body">
-                                    <p class="testimonials__text">Text styles for "Integrate 360 campaign viral disrupt pair programming latte paradigm hacker 360 campaign cortado bootstrapping. Thinker-maker-doer paradigm affordances viral bootstrapping ship it human-centered design
+                                    <p>Text styles for "Integrate 360 campaign viral disrupt pair programming latte paradigm hacker 360 campaign cortado bootstrapping. Thinker-maker-doer paradigm affordances viral bootstrapping ship it human-centered design
                                         waterfall is so 2000 and late responsive integrate parallax.</p>
                                 </blockquote>
                                 <figcaption>
@@ -287,7 +287,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer__top">
-                    <section class="footer__about footer__section">
+                    <section>
                         <h2 class="footer__title">About Us</h2>
                         <ul class="footer__list">
                             <li class="footer__list-item">About Us</li>
@@ -295,20 +295,20 @@
                             <li class="footer__list-item">Contact Us</li>
                         </ul>
                     </section>
-                    <section class="footer__address footer__section">
+                    <section class="footer__address">
                         <h2 class="footer__title">Address</h2>
                         <address>
                             4433 Heavner Court Plainview, New York
                         </address>
                     </section>
-                    <section class="footer__contacts footer__section">
+                    <section class="footer__contacts">
                         <h2 class="footer__title">Contact Us</h2>
                         <address>                             
                             <a href="mailto:help@agency.com">Email: help@agency.com</a>
                             <a href="tel:+5162600598">Cell: +516-260-0598</a>
                         </address>
                     </section>
-                    <section class="footer__follow footer__section">
+                    <section class="footer__follow">
                         <h2 class="footer__title">Follow Us</h2>
                         <ul class="footer__list footer__list--flex">
                             <li class="footer__list-item footer__list-item--social">
